# clinical-pathways

./: .gitignore  Dockerfile  Dockerfile-pathways  Makefile  app.py  conversion_scripts.py  docker-compose.yml  example_input.html  example_input.md  html_reorganization.ipynb  label-gen_requirements.txt  prestart.sh  pyproject.toml  requirements.txt
apache-config/: api.openmedcalc.org-le-ssl.conf  api.openmedcalc.org.conf  notes.md  pathways.stanes.link-le-ssl.conf  pathways.stanes.link.conf  quality.stanes.link-le-ssl.conf  quality.stanes.link.conf  stanes.link-le-ssl.conf  stanes.link.conf
app/: __init__.py
app/static/styles/: human.css  larissa.css  physical.css  tan.css
app/templates/: index_template.html  page-style.css  pathway_template.html
docker/: Dockerfile-pathways  docker-compose.yml
static/: main.css
static/styles/: human.css  style.css
styles/: style.css
templates/: human.css  index.html  item_template.html  pathway.css  pathway.html  pathway_human.html  pathway_template.html  result.html
vectors/: Healthcare_and_Medical_Outline-45.eps
